# Vertex-cover-problem-Installation-of-security-cameras-at-traffic-intersections

random_generator_ipc/: CMakeLists.txt  a1ece650.py  a2ece650.cpp  a3ece650  a3ece650.cpp  rgen  rgen.cpp
random_generator_ipc_part3/: a2ece650  a3ece650
sat_solvers_part4/: CMakeLists.txt  mainProgram.cpp
shortest_path/: assignment2.cpp  assignment2_self.cpp  demo.cpp  swap.cpp
shortest_path_part2/: a2ece650.cpp
vertex_intersection/: a1ece650.txt  main.py
vertex_intersection_part1/: input.txt
